[hide] Fix broken layout in old inspector ???

--- a/bin/style.less
+++ b/bin/style.less
@@ -1403,6 +1403,8 @@ input[type=checkbox] {
 		}
 
 		>.content {
+			width: 100%;
+
 			margin-bottom : 5px;
 
 			.array {
